--- a/src/assets/mixins/links.scss
+++ b/src/assets/mixins/links.scss
@@ -1,34 +1,51 @@
-@use "../utils/functions" as *;
+@use '../utils/functions' as *;
 
 @mixin hover-mouse {
-  transition: 0.3s ease;
-  &:hover {
-    transform: scale(1.4);
-    cursor: pointer;
-  }
+ transition: 0.3s ease;
+ &:hover {
+  transform: scale(1.4);
+  cursor: pointer;
+ }
 }
 @mixin mouse-click {
-  transition: 0.3s ease;
-  &:active {
-    transform: scale(1.2);
-  }
+ transition: 0.3s ease;
+ &:active {
+  transform: scale(1.2);
+ }
 }
 @mixin touch {
-  transition: 0.3s ease;
-  &:active {
-    transform: scale(1.05);
-  }
+ transition: 0.3s ease;
+ &:active {
+  transform: scale(1.05);
+ }
+}
+
+@mixin link-button {
+ border: 1px solid #00e0d0;
+ padding: rem(7.5) rem(13);
+ color: #00e0d0;
+ font-weight: 500;
+ font-size: rem(14);
+ cursor: pointer;
+ transition: 0.3s ease;
+ &:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+ }
+ &:active {
+  transform: scale(1.05);
+ }
 }
 
 @mixin simple-link {
+ cursor: pointer;
+ transition: 0.3s ease;
+ &:hover {
+  color: #00e0d0;
+  transform: scale(1.1);
   cursor: pointer;
-  transition: 0.3s ease;
-  &:hover {
-    color: #00e0d0;
-    transform: scale(1.1);
-    cursor: pointer;
-  }
-  &:active {
-    transform: scale(1.05);
-  }
+ }
+ &:active {
+  transform: scale(1.05);
+ }
 }
